--- a/services/auth-service/package.json
+++ b/services/auth-service/package.json
@@ -11,10 +11,13 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "bcryptjs": "^3.0.2",
     "joi": "^18.0.0",
+    "jsonwebtoken": "^9.0.2",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.2.0",
     "prisma": "^6.13.0"
   }
