--- a/services/auth-service/package.json
+++ b/services/auth-service/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@prisma/client": "^6.13.0",
     "bcryptjs": "^3.0.2",
+    "express": "^5.1.0",
     "joi": "^18.0.0",
     "jsonwebtoken": "^9.0.2",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.2.0",
     "prisma": "^6.13.0"
