--- a/shared/package.json
+++ b/shared/package.json
@@ -14,6 +14,7 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "@types/node": "^24.2.0",
     "typescript": "^5.9.2"
   }
